# ttymidi

./: .clang-format  .dockerignore  .gitignore  Dockerfile  Makefile  README.md
.github/workflows/: build.yml  e2e.yml  release.yml  test.yml
e2e-test/: README.md  conftest.py  harness.py  pyproject.toml  test_directions.py
e2e-test/typings/rtmidi/: __init__.pyi
e2e-test/vm/: lima.yaml  run.sh
src/: midi.c  midi.h  serial_io.c  serial_io.h  ttymidi.c
tests/: dump_fixtures.h  gen_dump_fixtures.py  test_dumps.c  test_midi.c  test_serial_io.c
tests/fixtures/: dump_serial_print.txt  dump_verbose.txt
