[project]
name = "ttymidi-e2e"
version = "0.0.0"
description = "End-to-end tests driving the ttymidi binary over a PTY and the ALSA sequencer."
requires-python = ">=3.12"
dependencies = [
    "python-rtmidi>=1.5.8",
    "pytest>=8.3",
]

# This is a test harness, not an installable package: tell uv not to build it.
[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "basedpyright>=1.29.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["harness"]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
# python-rtmidi is an untyped C extension; we declare the API we use in typings/.
stubPath = "typings"
